# csmt

./: .gitignore  CMakeLists.txt  LICENSE  README.md
benchmark/: CMakeLists.txt  benchmark.cpp  benchmark_utils.cpp  hash_policy.h  utils.h
contrib/crypto/: sha256.cpp  sha256.h
contrib/gtest/: gtest.h
scripts/: .clang-format
src/: CMakeLists.txt  csmt.h  log2_utils.h  main.cpp
src/utils/: mingw_patch.h
tests/: CMakeLists.txt  emulate.cpp  reproducer.cpp  stress_tests.cpp  structural_tests.cpp  unit_tests.cpp  ut.cpp  utils.h
tests/common/: test_utils.h
